--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "backend": "json-server --watch ./data/db.json --port 5000"
   },
   "dependencies": {
+    "json-server": "^0.17.4",
     "pinia": "^2.1.7",
     "tailwindcss": "^3.3.3",
     "vue": "^3.3.4",
