--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "backend": "json-server --watch ./data/db.json --port 5000"
   },
   "dependencies": {
+    "axios": "^1.6.1",
     "json-server": "^0.17.4",
     "pinia": "^2.1.7",
     "tailwindcss": "^3.3.3",
