--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "backend": "json-server --watch ./data/db.json --port 5000"
   },
   "dependencies": {
+    "@vueuse/core": "^10.6.1",
     "axios": "^1.6.1",
     "json-server": "^0.17.4",
     "pinia": "^2.1.7",
+    "swiper": "^11.0.4",
     "tailwindcss": "^3.3.3",
     "vue": "^3.3.4",
+    "vue-dynamic-star-rating": "^1.0.8",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
