--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "swiper": "^11.0.4",
     "tailwindcss": "^3.3.3",
     "vue": "^3.3.4",
+    "vue-awesome-paginate": "^1.1.46",
     "vue-date-countdown": "^0.3.1",
     "vue-dynamic-star-rating": "^1.0.8",
     "vue-router": "^4.2.5"
