--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "axios": "^1.6.1",
     "json-server": "^0.17.4",
     "pinia": "^2.1.7",
-    "sweetalert2": "^11.10.1",
+    "pinia-plugin-persistedstate": "^3.2.0",
     "swiper": "^11.0.4",
     "tailwindcss": "^3.3.3",
     "vue": "^3.3.4",
