--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.6.1",
+    "aos": "^2.3.4",
     "axios": "^1.6.1",
     "json-server": "^0.17.4",
     "pinia": "^2.1.7",
